Compiler/doc/exp.output
Terminals unused in grammar

   ASSIGNOP


Grammar

    0 $accept: input $end

    1 input: /* empty */
    2      | input line

    3 line: '\n'
    4     | exp '\n'
    5     | error '\n'

    6 exp: INT
    7    | ID
    8    | exp PLUS exp
    9    | exp MINUS exp
   10    | exp STAR exp
   11    | exp DIV exp
   12    | LP exp RP
   13    | MINUS exp


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4 5
error (256) 5
INT (258) 6
ID (259) 7
LP (260) 12
RP (261) 12
PLUS (262) 8
MINUS (263) 9 13
STAR (264) 10
DIV (265) 11
ASSIGNOP (266)
UMINUS (267)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
input (15)
    on left: 1 2, on right: 0 2
line (16)
    on left: 3 4 5, on right: 2
exp (17)
    on left: 6 7 8 9 10 11 12 13, on right: 4 8 9 10 11 12 13


state 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


state 1

    0 $accept: input . $end
    2 input: input . line

    $end   shift, and go to state 2
    error  shift, and go to state 3
    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7
    '\n'   shift, and go to state 8

    line  go to state 9
    exp   go to state 10


state 2

    0 $accept: input $end .

    $default  accept


state 3

    5 line: error . '\n'

    '\n'  shift, and go to state 11


state 4

    6 exp: INT .

    $default  reduce using rule 6 (exp)


state 5

    7 exp: ID .

    $default  reduce using rule 7 (exp)


state 6

   12 exp: LP . exp RP

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7

    exp  go to state 12


state 7

   13 exp: MINUS . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7

    exp  go to state 13


state 8

    3 line: '\n' .

    $default  reduce using rule 3 (line)


state 9

    2 input: input line .

    $default  reduce using rule 2 (input)


state 10

    4 line: exp . '\n'
    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp

    PLUS   shift, and go to state 14
    MINUS  shift, and go to state 15
    STAR   shift, and go to state 16
    DIV    shift, and go to state 17
    '\n'   shift, and go to state 18


state 11

    5 line: error '\n' .

    $default  reduce using rule 5 (line)


state 12

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp
   12    | LP exp . RP

    RP     shift, and go to state 19
    PLUS   shift, and go to state 14
    MINUS  shift, and go to state 15
    STAR   shift, and go to state 16
    DIV    shift, and go to state 17


state 13

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp
   13    | MINUS exp .

    $default  reduce using rule 13 (exp)


state 14

    8 exp: exp PLUS . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7

    exp  go to state 20


state 15

    9 exp: exp MINUS . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7

    exp  go to state 21


state 16

   10 exp: exp STAR . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7

    exp  go to state 22


state 17

   11 exp: exp DIV . exp

    INT    shift, and go to state 4
    ID     shift, and go to state 5
    LP     shift, and go to state 6
    MINUS  shift, and go to state 7

    exp  go to state 23


state 18

    4 line: exp '\n' .

    $default  reduce using rule 4 (line)


state 19

   12 exp: LP exp RP .

    $default  reduce using rule 12 (exp)


state 20

    8 exp: exp . PLUS exp
    8    | exp PLUS exp .
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp

    STAR  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 8 (exp)


state 21

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
    9    | exp MINUS exp .
   10    | exp . STAR exp
   11    | exp . DIV exp

    STAR  shift, and go to state 16
    DIV   shift, and go to state 17

    $default  reduce using rule 9 (exp)


state 22

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   10    | exp STAR exp .
   11    | exp . DIV exp

    $default  reduce using rule 10 (exp)


state 23

    8 exp: exp . PLUS exp
    9    | exp . MINUS exp
   10    | exp . STAR exp
   11    | exp . DIV exp
   11    | exp DIV exp .

    $default  reduce using rule 11 (exp)
